--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,14 @@
   justify-content: center;
 }
 
+/* styling for Loading component */
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%
+}
+
 /* header component styling */
 .header {
   background-color: red;
