added styling to image in the ImageCarousel component, expanding on the baked in styling already applied, removed inline styling

--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,12 @@ button:hover {
   font-size: larger;
 }
 
+
+/* Styling for ImageCarousel component */
+
+.d-block{
+  height: 250px;
+  margin: auto;
+  max-width: 100%;
+  background-color: black;
+}
