--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,6 @@ button:hover {
   background-color: black;
   display:flex;
   flex-direction: column;
-  /* width: 50%; */
 }
 
 .InfoWrapper{
@@ -83,8 +82,14 @@ button:hover {
 .randomListItem{
   margin: 5px;
   padding: 5px;
-  width: 50%;
+  width: 300px;
   font-size: small;
+}
+
+@media (max-width: 1000px) {
+  .randomListItem {
+    width: 200px;
+  }
 }
 
 /* Styling for LandingCard component*/
