--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 100vh;
+}
+
+/* footer element styling */
+footer {
+  background-color: red;
+  height: 50px;
+  margin-top: auto;
 }
 
 /* styling for Loading component */
@@ -13,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%
+  /* height: 100% */
 }
 
 /* header component styling */
@@ -118,7 +126,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .searchBox {
