add margin bottom to searchedPokemonWrapper so it is not flush with the footer

--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  /* height: 100%; */
+  margin-bottom: 20px;
 }
 
 .searchBox {
